--- a/bip39/index.html
+++ b/bip39/index.html
@@ -51,6 +51,7 @@
                 <div class="col-md-12">
                     <h2>Phrase</h2>
                     <form class="form-horizontal" role="form">
+                        <p>You can enter an existing BIP39 phrase, or generate a new random one. Typing your own twelve words will probably not work how you expect, since the words require a particular structure (the last word is a checksum)</p>
                         <div class="col-sm-2"></div>
                         <div class="col-sm-10">
                             <p>For more info see the <a href="https://github.com/bitcoin/bips/blob/master/bip-0039.mediawiki" target="_blank">BIP39 spec</a></p>
