Disabled fields use normal text-select cursor

--- a/bip39/index.html
+++ b/bip39/index.html
@@ -21,6 +21,9 @@
             body {
                 padding-bottom: 32px;
             }
+            .form-control[disabled] {
+                cursor: auto;
+            }
             .feedback-container {
                 position: fixed;
                 top: 0;
