--- a/bip39/index.html
+++ b/bip39/index.html
@@ -21,8 +21,8 @@
             body {
                 padding-bottom: 32px;
             }
-            .form-control[disabled] {
-                cursor: auto;
+            .form-control[readonly] {
+                cursor: text;
             }
             .feedback-container {
                 position: fixed;
@@ -85,7 +85,7 @@
                         <div class="form-group">
                             <label for="root-key" class="col-sm-2 control-label">BIP32 Root Key</label>
                             <div class="col-sm-10">
-                                <textarea id="root-key" class="root-key form-control" disabled="disabled"></textarea>
+                                <textarea id="root-key" class="root-key form-control" readonly="readonly"></textarea>
                             </div>
                         </div>
                     </form>
@@ -145,7 +145,7 @@
                                 <div class="form-group">
                                     <label for="bip44-path" class="col-sm-2 control-label">BIP32 Derivation Path</label>
                                     <div class="col-sm-10">
-                                        <input id="bip44-path" type="text" class="path form-control" value="m/44'/0'/0'/0" disabled="disabled">
+                                        <input id="bip44-path" type="text" class="path form-control" value="m/44'/0'/0'/0" readonly="readonly">
                                     </div>
                                 </div>
                             </form>
@@ -170,13 +170,13 @@
                         <div class="form-group">
                             <label for="extended-priv-key" class="col-sm-2 control-label">BIP32 Extended Key</label>
                             <div class="col-sm-10">
-                                <textarea id="extended-priv-key" class="extended-priv-key form-control" disabled="disabled"></textarea>
+                                <textarea id="extended-priv-key" class="extended-priv-key form-control" readonly="readonly"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="extended-pub-key" class="col-sm-2 control-label">BIP32 Extended Key (addresses only)</label>
                             <div class="col-sm-10">
-                                <textarea id="extended-pub-key" class="extended-pub-key form-control" disabled="disabled"></textarea>
+                                <textarea id="extended-pub-key" class="extended-pub-key form-control" readonly="readonly"></textarea>
                             </div>
                         </div>
                     </form>
