Revert "Update only happens when phrase is changed"
This reverts commit 839afbeadbb3cf78d9fb32e6385b6cc85e4376b4.

--- a/bip39/index.html
+++ b/bip39/index.html
@@ -22733,8 +22733,6 @@ WORDLISTS = {
     DOM.privateKeyToggle = $(".private-key-toggle");
 
     var derivationPath = DOM.bip44path.val();
-    var currentPhrase = DOM.phrase.val();
-    var currentPassphrase = DOM.passphrase.val();
 
     function init() {
         // Events
@@ -22759,9 +22757,6 @@ WORDLISTS = {
     // Event handlers
 
     function delayedPhraseChanged() {
-        if (!hasChanged()) {
-            return;
-        }
         hideValidationError();
         showPending();
         if (phraseChangeTimeoutEvent != null) {
@@ -22791,9 +22786,6 @@ WORDLISTS = {
         calcBip32Seed(phrase, passphrase, derivationPath);
         displayBip32Info();
         hidePending();
-        // Set current state so we only update as needed
-        currentPhrase = phrase;
-        currentPassphrase = passphrase;
     }
 
     function generateClicked() {
@@ -22815,9 +22807,7 @@ WORDLISTS = {
     }
 
     function derivationChanged() {
-        hideValidationError();
-        showPending();
-        setTimeout(phraseChanged, 50);
+        delayedPhraseChanged();
     }
 
     function bip32Changed() {
@@ -23044,12 +23034,6 @@ WORDLISTS = {
         DOM.feedback
             .text("")
             .hide();
-    }
-
-    function hasChanged() {
-        var phraseChanged = DOM.phrase.val() != currentPhrase;
-        var passphraseChanged = DOM.passphrase.val() != currentPassphrase;
-        return phraseChanged || passphraseChanged;
     }
 
     init();
