--- a/bip39/index.html
+++ b/bip39/index.html
@@ -340,7 +340,7 @@
         </div>
 
         <div class="feedback-container">
-            <div class="feedback"></div>
+            <div class="feedback">Loading...</div>
         </div>
 
         <script type="text/template" id="address-row-template">
