--- a/bip39/index.html
+++ b/bip39/index.html
@@ -52,15 +52,15 @@
             <hr>
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Phrase</h2>
+                    <h2>Mnemonic</h2>
                     <form class="form-horizontal" role="form">
                         <div class="col-sm-2"></div>
                         <div class="col-sm-10">
-                            <p>You can enter an existing BIP39 phrase, or generate a new random one. Typing your own twelve words will probably not work how you expect, since the words require a particular structure (the last word is a checksum)</p>
+                            <p>You can enter an existing BIP39 mnemonic, or generate a new random one. Typing your own twelve words will probably not work how you expect, since the words require a particular structure (the last word is a checksum)</p>
                             <p>For more info see the <a href="https://github.com/bitcoin/bips/blob/master/bip-0039.mediawiki" target="_blank">BIP39 spec</a></p>
                         </div>
                         <div class="form-group">
-                            <label for="phrase" class="col-sm-2 control-label">BIP39 Phrase</label>
+                            <label for="phrase" class="col-sm-2 control-label">BIP39 Mnemonic</label>
                             <div class="col-sm-10">
                                 <textarea id="phrase" class="phrase form-control"></textarea>
                             </div>
@@ -71,7 +71,7 @@
                                 <div class="input-group">
                                     <input type="number" class="strength form-control" id="strength" value="12">
                                     <span class="input-group-btn">
-                                        <button class="btn generate">Generate Random Phrase</button>
+                                        <button class="btn generate">Generate Random Mnemonic</button>
                                     </span>
                                 </div>
                             </div>
