bip32.org format not used for seed
ie put the bip39 seed directly into bip32 without hashing it first like
bip32.org does with passphrases.
Note that the original version is still available at
https://dcpos.github.io/bip39/v1

--- a/bip39/v1/index.html
+++ b/bip39/v1/index.html
@@ -22865,7 +22865,8 @@ WORDLISTS = {
 
     function calcBip32Seed(phrase, passphrase, path) {
         var seed = mnemonic.toSeed(phrase, passphrase);
-        bip32RootKey = Bitcoin.HDNode.fromSeedHex(seed, network);
+        var seedHash = Bitcoin.crypto.sha256(seed).toString("hex");
+        bip32RootKey = Bitcoin.HDNode.fromSeedHex(seedHash, network);
         bip32ExtendedKey = bip32RootKey;
         // Derive the key from the path
         var pathBits = path.split("/");
