passing in network to toWIF

--- a/bip39/index.html
+++ b/bip39/index.html
@@ -22942,7 +22942,7 @@ WORDLISTS = {
             var index = i+ start;
             var key = bip32ExtendedKey.derive(index);
             var address = key.getAddress().toString();
-            var privkey = key.privKey.toWIF();
+            var privkey = key.privKey.toWIF(network);
             addAddressToList(index, address, privkey);
         }
     }
