--- a/bip39/index.html
+++ b/bip39/index.html
@@ -33893,6 +33893,7 @@ var Mnemonic = function(language) {
     DOM.indexToggle = $(".index-toggle");
     DOM.addressToggle = $(".address-toggle");
     DOM.privateKeyToggle = $(".private-key-toggle");
+    DOM.myceliumPath = $("#mycelium-path");
 
     var derivationPath = $(".tab-pane.active .path").val();
 
@@ -33924,10 +33925,12 @@ var Mnemonic = function(language) {
         if (n == "bitcoin") {
             network = Bitcoin.networks.bitcoin;
             DOM.bip44coin.val(0);
+            DOM.myceliumPath.val("m/44'/0'/0'/0");
         }
         else if (n == "bitcoin-testnet") {
             network = Bitcoin.networks.testnet;
             DOM.bip44coin.val(1);
+            DOM.myceliumPath.val("m/44'/1'/0'/0");
         }
         else if (n == "litecoin") {
             network = Bitcoin.networks.litecoin;
@@ -33935,8 +33938,7 @@ var Mnemonic = function(language) {
         }
         else if (n == "dogecoin") {
             network = Bitcoin.networks.dogecoin;
-            var UNOFFICIAL_BIP44_COIN = 9999;
-            DOM.bip44coin.val(UNOFFICIAL_BIP44_COIN); // This coin is not in BIP44
+            DOM.bip44coin.val(3);
         }
         setBip44DerivationPath();
         delayedPhraseChanged();
