Index column changed to Path

--- a/bip39/index.html
+++ b/bip39/index.html
@@ -223,7 +223,7 @@
                         <thead>
                             <th>
                                 <div class="input-group">
-                                    Index&nbsp;&nbsp;
+                                    Path&nbsp;&nbsp;
                                     <button class="index-toggle">Toggle</button>
                                 </div>
                             </th>
@@ -14907,7 +14907,8 @@ var Mnemonic = function(language) {
         var addressCell = row.find(".address span");
         var privkeyCell = row.find(".privkey span");
         // Content
-        indexCell.text(index);
+        var indexText = derivationPath + "/" + index;
+        indexCell.text(indexText);
         addressCell.text(address);
         privkeyCell.text(privkey);
         // Visibility
