Typo privkeCell > privkeyCell

--- a/bip39/index.html
+++ b/bip39/index.html
@@ -14918,7 +14918,7 @@ var Mnemonic = function(language) {
             addressCell.addClass("invisible");
         }
         if (!showPrivKey) {
-            privkeCell.addClass("invisible");
+            privkeyCell.addClass("invisible");
         }
         DOM.addresses.append(row);
     }
