--- a/blocksize/index.html
+++ b/blocksize/index.html
@@ -222,8 +222,8 @@
                                         <input class="speed form-control small" value="100" type="number" id="unlimited-speed" x-url-param>
                                         Mbps
                                     </div>
-                                    with an orphan rate of
-                                    <span class="orphan-rate">?</span>%
+                                    with a stale block rate of
+                                    <span class="stale-rate">?</span>%
                                 </td>
                                 <td class="popup text-center" title="">
                                     <p class="form-control-static">&plus;</p>
@@ -361,6 +361,7 @@
                        <li>Fees and the fee market, and how this affects the incentive structure for all participants of the network.</li>
                        <li>The operational difference between miners and full nodes.</li>
                        <li>The impact of orphan blocks and reorgs.</li>
+                       <li>The impact of stale blocks.</li>
                        <li>The processing load of transactions is not identical for every transaction.</li>
                        <li>The size (ie bytes) of transactions is not identical for every transaction.</li>
                        <li>The impact of SPV wallets and miners, ie varying degrees of verification.</li>
@@ -384,6 +385,7 @@
                        <li>The acceptable latency of blocks when 'catching up' in a series of good luck from miners.</li>
                        <li>The effect of pruning nodes vs full nodes.</li>
                        <li>Block timestamps are 'as-reported' by miners, and may not reflect the true time, possibly affecting the timing stats above.</li>
+                       <li>Latency of multiple global hops may become nontrivial.</li>
                    </ul>
                    <p>Without a full understanding of these complexities, there may be risk to changing the bitcoin max block size.</p>
                </div>
