--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
                         <a href="https://github.com/iancoleman/blocksize_calculator">Source code</a>
                     </li>
                 </ul>
+            </li>
+            <li>
+                <p>Shamir Secret Sharing Scheme Tool</p>
+                <ul>
+                    <li>
+                        <a href="/shamir/">Site</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/iancoleman/shamir">Source code</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </body>
 </html>
