--- a/blocksize/index.html
+++ b/blocksize/index.html
@@ -82,11 +82,23 @@
                 nodes, requiring
                 <div class="popup">
                     <span class="hops">?</span>
-                    hops<sup>?</sup>
+                    hops
                     <div class="popup-content">
-                        <span>
+                        <div>
                             Depending on network topology.
-                        </span>
+                        </div>
+                        <div>
+                            1 hop covers <span class="peers">8</span><sup>1</sup> = 8 nodes.
+                        </div>
+                        <div>
+                            2 hops covers <span class="peers">8</span><sup>2</sup> = 64 nodes.
+                        </div>
+                        <div>
+                            ...
+                        </div>
+                        <div>
+                            <span class="hops">4</span> hops covers <span class="peers">8</span><sup class="hops">4</sup> = <span class="hop-n-nodes">4096</span> nodes.
+                        </div>
                     </div>
                 </div>
                 to fully broadcast a block.
@@ -107,8 +119,59 @@
                             <td>must be at least</td>
                             <td class="bandwidth">
                                 <table>
-                                    <tr><td class="text-right">Down: </td><td class="down">?</td></tr>
-                                    <tr><td class="text-right">Up: </td><td class="up">?</td></tr>
+                                    <tr>
+                                        <td class="text-right">Down: </td>
+                                        <td class="popup">
+                                            <span class="down">?</span>
+                                            <div class="popup-content">
+                                                <span class="block-size">1</span> MB block &times;
+                                                8 bits per byte &times;
+                                                (<span class="blocks">1</span> &div;
+                                                <span class="time">600</span>) blocks per second &times;
+                                                1 download peer &times;
+                                                <span class="hops">4</span> hops
+                                                =
+                                                <strong><span class="down">?</span> Mbps</strong>
+                                                <br>
+                                                =<span class="block-size">1</span>*8*(<span class="blocks">1</span>/<span class="time">600</span>)*1*<span class="hops">4</span>
+                                                <br>
+                                                <span>
+                                                    This is the
+                                                    <em>absolute minimum</em>
+                                                    required for the network to operate, and
+                                                    should be an order of magnitude larger to
+                                                    provide reliable operation.
+                                                </span>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-right">Up: </td>
+                                        <td class="popup">
+                                            <span class="up">?</span>
+                                            <div class="popup-content">
+                                                <span class="block-size">1</span> MB block &times;
+                                                8 bits per byte &times;
+                                                (<span class="blocks">1</span> &div;
+                                                <span class="time">600</span>) blocks per second &times;
+                                                (<span class="peers">8</span> -
+                                                1) upload peers &times;
+                                                <span class="hops">4</span> hops
+                                                =
+                                                <strong><span class="up">?</span> Mbps</strong>
+                                                <br>
+                                                =<span class="block-size">1</span>*8*(<span class="blocks">1</span>/<span class="time">600</span>)*(<span class="peers">8</span>-1)*<span class="hops">4</span>
+                                                <br>
+                                                <span>
+                                                    This is the
+                                                    <em>absolute minimum</em>
+                                                    required for the network to operate, and
+                                                    should be an order of magnitude larger to
+                                                    provide reliable operation.
+                                                </span>
+                                            </div>
+                                        </td>
+                                    </tr>
                                 </table>
                             </td>
                             <td>Mbps</td>
@@ -117,7 +180,15 @@
                             <td>Data Cap</td>
                             <td>must be at least</td>
                             <td class="data-cap">?</td>
-                            <td>GB per 31 days</td>
+                            <td>
+                                GB per
+                                <div class="popup">
+                                month
+                                    <div class="popup-content">
+                                        The duration of a month is calculated as 365 days &div; 12 months.
+                                    </div>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <td>Supplied Disk Capacity</td>
@@ -247,12 +318,9 @@
                                         <div class="error text-danger hidden">
                                             This plan cannot provide enough bandwidth to run a full node.
                                         </div>
-                                        <span>
-                                            Days per month is calculated as 365 / 12.
-                                            This is slightly different to the definition
-                                            of a month used in the Constraints section,
-                                            which is 31 days.
-                                        </span>
+                                        <div>
+                                            Costs are proportional because this tool evaluates 'the cost of bitcoin' not 'the bill you get'.
+                                        </div>
                                     </div>
                                 </td>
                                 <td class="text-right">
@@ -428,12 +496,18 @@
             </div>
         </div>
 
-        <script src="js/select.js"></script>
+        <script src="js/zepto.min.js"></script>
+        <script src="js/consts.js"></script>
         <script src="js/urlparams.js"></script>
         <script src="js/papaparse.min.js"></script>
         <script src="js/Chart.min.js"></script>
         <script src="js/block-data.js"></script>
-        <script src="js/results.js"></script>
+        <script src="js/network.js"></script>
+        <script src="js/bandwidth.js"></script>
+        <script src="js/processing.js"></script>
+        <script src="js/disk.js"></script>
+        <script src="js/labor.js"></script>
+        <script src="js/app.js"></script>
         <script src="js/tests.js"></script>
 
     </body>
